--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-svg {
+/* svg {
   background-color: grey;
-}
+} */
 
 .label {
   font-weight: bold;
