--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
 <div style="text-align:center">
   <h1>Welcome to {{ title }}!</h1>
 </div>
-<!-- <angular-file-uploader [config]="afuConfig"> </angular-file-uploader> -->
+<angular-file-uploader [config]="afuConfig"> </angular-file-uploader>
 
 <router-outlet></router-outlet>
