--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.css';
+@import '~font-awesome/css/font-awesome.css';
+
 body {
   text-align: center;
 }
@@ -12,5 +15,9 @@ svg {
 }
 
 .node {
+  cursor: pointer;
+}
+
+label {
   cursor: pointer;
 }
