--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<!-- The content below is only a placeholder and can be replaced. -->
 <div>
   <h1>{{ title }}</h1>
 </div>
@@ -9,13 +8,9 @@
       type="file"
       class="custom-file-input"
       id="inputGroupFile01"
-      (change)="onChange($event.target.files)"
+      (change)="uploadFile($event.target.files)"
     />
     <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
   </div>
-
-  <!-- <div class="input-group-append">
-    <button class="btn btn-outline-secondary" type="button">Browse</button>
-  </div> -->
 </div>
 <router-outlet></router-outlet>
