--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
 }
 
 svg {
-  background-color: grey;
+  background-color: white;
 }
 
 path {
@@ -20,18 +20,20 @@ path {
 }
 
 .node {
+  fill: lightgrey;
   cursor: pointer;
 }
 
 .node-label {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-anchor: middle;
   initial-letter-align: middle;
   cursor: pointer;
 }
 
 .link-label {
-  fill: orange;
-  font-weight: bold;
+  fill: red;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-anchor: middle;
 }
 
